# vk-chat-bot

./: .env_sample  .gitignore  Makefile  README.md  bot_ORM.py  logger.py  main.py  pyproject.toml  setup.cfg  vk_bot.py
.github/workflows/: pyci.yml
tests/: test_vk_bot.py
vk_bot/: __init__.py  bot_ORM.py  cafe_demo.py  cli.py  logger.py  vk_bot.py
vk_bot/scripts/: vk_bot.py
